Fix mongodb error

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -26,7 +26,7 @@
           </div>
         </form>
         <% }) %>
-        <form class="todo-item" action="~/" method="POST">
+        <form class="todo-item" method="POST">
           <input
             type="text"
             class="new-todo-input"
